# DiffDomain

./: .gitignore  CMakeLists.txt  readme.md
scripts/: run_unit_tests  update-deps
src/: CMakeLists.txt  Numeric.hpp
src/Caffeine/: AffineForm.cpp  AffineForm.hpp  CMakeLists.txt
src/DualDomain/: MixedForm.cpp  MixedForm.hpp
src/DualNumber/: DualNumber.hpp
src/MixedForm/: CMakeLists.txt  MixedForm.cpp  MixedForm.hpp
src/Real/: CMakeLists.txt  Real.cpp  Real.hpp
src/SampleRange/: CMakeLists.txt  SampleRange.cpp  SampleRange.hpp
src/Winterval/: CMakeLists.txt  Winterval.cpp  Winterval.hpp
test/: CMakeLists.txt
test/affine/: CMakeLists.txt  test_affine_binop.cpp  test_affine_comparison.cpp  test_affine_misc.cpp  test_affine_scalar.cpp  test_affine_unop.cpp
test/dualdomain/: CMakeLists.txt  test_mixed_binop.cpp  test_mixed_comparison.cpp  test_mixed_misc.cpp  test_mixed_scalar.cpp  test_mixed_unop.cpp
test/dualnumber/: CMakeLists.txt  test_dual_binop.cpp  test_dual_comparison.cpp  test_dual_misc.cpp  test_dual_scalar.cpp  test_dual_unop.cpp
test/mixedform/: CMakeLists.txt  test_mixed_binop.cpp  test_mixed_misc.cpp  test_mixed_scalar.cpp  test_mixed_unop.cpp
test/samplerange/: CMakeLists.txt  test_samplerange.cpp
test/winterval/: CMakeLists.txt  test_winterval.cpp
